--- a/LearnMvc/WebUI.Tests/WebUI.Tests.csproj
+++ b/LearnMvc/WebUI.Tests/WebUI.Tests.csproj
@@ -51,6 +51,12 @@
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WebUI\WebUI.csproj">
+      <Project>{A5539486-4BF7-4E8F-956C-1EEB0969479C}</Project>
+      <Name>WebUI</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
