Add Basic rights management Entity

--- a/src/LearnMvc.Domain/LearnMvc.Domain.csproj
+++ b/src/LearnMvc.Domain/LearnMvc.Domain.csproj
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{bec1ce08-aaa4-4423-8bd2-3e02ddaab7ff}</ProjectGuid>
+    <ProjectGuid>{BEC1CE08-AAA4-4423-8BD2-3E02DDAAB7FF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>LearnMvc.Domain</RootNamespace>
@@ -35,10 +35,20 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .NET Framework is automatically included -->
+    <Folder Include="Repositories\" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Entities\Action.cs" />
+    <Compile Include="Entities\ActionColumn.cs" />
+    <Compile Include="Entities\ActionGroup.cs" />
+    <Compile Include="Entities\GroupManager.cs" />
+    <Compile Include="Entities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Entities\UserGroup.cs" />
+    <Compile Include="Enum\Sex.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Mapping\.Keep" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -48,5 +58,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-
 </Project>
