reset this projetc library type

--- a/src/LearnMvc.IocManager/LearnMvc.IocManager.csproj
+++ b/src/LearnMvc.IocManager/LearnMvc.IocManager.csproj
@@ -1,20 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
-    <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0A528E1A-A5D7-408F-A9D0-78D2A5857F61}</ProjectGuid>
+    <ProjectGuid>828fc550-4235-4fab-9ebb-5c5201f235af</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>LearnMvc.IocManager</RootNamespace>
     <AssemblyName>LearnMvc.IocManager</AssemblyName>
-    <DefaultLanguage>en-US</DefaultLanguage>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <TargetFrameworkProfile>Profile111</TargetFrameworkProfile>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,29 +30,26 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <!-- A reference to the entire .NET Framework is automatically included -->
-    <ProjectReference Include="..\LearnMvc.Context\LearnMvc.Context.csproj">
-      <Project>{17209f6a-edd4-467c-9c97-a4e265b8bba9}</Project>
-      <Name>LearnMvc.Context</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LearnMvc.Domain\LearnMvc.Domain.csproj">
-      <Project>{bec1ce08-aaa4-4423-8bd2-3e02ddaab7ff}</Project>
-      <Name>LearnMvc.Domain</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LearnMvc.Repository\LearnMvc.Repository.csproj">
-      <Project>{d63e6098-6b01-42a2-b68b-cd354f2a9cea}</Project>
-      <Name>LearnMvc.Repository</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\LearnMvc.Server\LearnMvc.Application.csproj">
-      <Project>{0dcb3116-d1ae-471d-9c60-649a315643b4}</Project>
-      <Name>LearnMvc.Application</Name>
-    </ProjectReference>
+    <Reference Include="System"/>
+    
+    <Reference Include="System.Core"/>
+    <Reference Include="System.Xml.Linq"/>
+    <Reference Include="System.Data.DataSetExtensions"/>
+    
+    
+    <Reference Include="Microsoft.CSharp"/>
+    
+    <Reference Include="System.Data"/>
+    
+    <Reference Include="System.Net.Http"/>
+    
+    <Reference Include="System.Xml"/>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
@@ -64,4 +57,5 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-</Project>
+
+ </Project>
