--- a/src/LearnMvc.Context/LearnMvc.Context.csproj
+++ b/src/LearnMvc.Context/LearnMvc.Context.csproj
@@ -63,6 +63,9 @@
     <Compile Include="Mapping\ActionGroupMap.cs" />
     <Compile Include="Mapping\ActionMap.cs" />
     <Compile Include="Mapping\GroupManagerMap.cs" />
+    <Compile Include="Mapping\UserGroupMap.cs" />
+    <Compile Include="Mapping\UserMap.cs" />
+    <Compile Include="MvcDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
